dimagi-SalesforceFB/src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>ALL_TIME_Income__c</fullName>
        <label>ALL TIME Income</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Temporary field: Used to edit the account field once a contract has been activated.</inlineHelpText>
        <label>New Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is this Contract Active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <picklist>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poverty and Economic Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Resource Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training &amp; Education Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orphans and Vulnerable Children</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Billable_Expense_Income__c</fullName>
        <label>Billable Expense Income</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billable_Travel__c</fullName>
        <label>Billable Travel</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Burdened_Income_BUDGET__c</fullName>
        <label>Burdened Income BUDGET</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <inlineHelpText>The date the project actually ends</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <inlineHelpText>The date the contract actually starts.</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>FFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T&amp;M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Plus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contracting_Entity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Business Unit in Dimagi that signed the contract with the customer. (DSI, DSA, Inc, DMoz)</inlineHelpText>
        <label>Contracting Business Unit</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimagi_Prime_Contracting_Entity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Prime Contracting Business Unit</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Dimagi Prime Contracting Entity</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Direct_Costs_Sub_Contract_BUDGET__c</fullName>
        <label>Sub-Contract BUDGET</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Costs_Sub_contract_Expenses__c</fullName>
        <label>Sub-contract SPEND</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Costs_Travel_BUDGET__c</fullName>
        <label>Travel BUDGET</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Costs_Travel_Expenses__c</fullName>
        <label>Travel SPEND</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Execution_Date__c</fullName>
        <label>Contract Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funder_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is actually supplying the funding for this (ex. USAID)</inlineHelpText>
        <label>Funder Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Funding Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which organization is running the project on the ground?</inlineHelpText>
        <label>Implementing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts (Implementing Account)</relationshipLabel>
        <relationshipName>Implementing_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intracompany_Sub_contract__c</fullName>
        <inlineHelpText>For internal accounting. Is this an internal subcontract between Dimagi business units (Y/N)</inlineHelpText>
        <label>Intracompany Sub-contract?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Dropbox_Location__c</fullName>
        <inlineHelpText>This should be in Dimagi - Projects</inlineHelpText>
        <label>Project Dropbox Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal_Dropbox_Location__c</fullName>
        <inlineHelpText>This should be in Dimagi - Proposals</inlineHelpText>
        <label>Proposal Dropbox Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Salesforce_Contract_ID__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>The external reference number of contracts.</inlineHelpText>
        <label>Salesforce Contract ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Income__c</fullName>
        <label>Services Income</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <inlineHelpText>Brief description of the contract (255 chars)</inlineHelpText>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Area__c</fullName>
        <label>Sub Area</label>
        <picklist>
            <picklistValues>
                <fullName>*** Health ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maternal, Newborn, &amp; Child Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIV/AIDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Respiratory Diseases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuberculosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vaccinations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diarrhea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Communicable Diseases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nutrition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*** Poverty and Economic Development ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gender Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water, Sanitation, &amp; Hygiene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services to the Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urban Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*** Natural Resource Management ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*** Training &amp; Education Services ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Childhood Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*** Logistics ***</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commodity Tracking/Procurement</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary / Overview</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Amount_REMAINING__c</fullName>
        <formula>IF( Total_Amount_of_Contract__c -  Services_Income__c &lt; 0, 0, Total_Amount_of_Contract__c -  Services_Income__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount REMAINING</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_of_Contract__c</fullName>
        <label>Total Amount of Contract</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Direct_Costs_BUDGET__c</fullName>
        <label>Total Direct Costs BUDGET</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Direct_Costs_Expenses__c</fullName>
        <label>Total Direct Costs Expense SPEND</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Labor_Expenses__c</fullName>
        <label>Labor SPEND</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X10_Major_component_risks__c</fullName>
        <label>Major component risks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X7_Long_term_partnership_or_one_off__c</fullName>
        <label>Long term partnership or one-off</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>YTD_Income__c</fullName>
        <label>YTD Income</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>executive_sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this opportunity has innovation or strategic value not well captured through other impact, team, or profit metrics, it requires an executive sponsor.</inlineHelpText>
        <label>Executive Sponsor</label>
        <referenceTo>SFDC_Employee__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>contract_sponsor</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Account__c</columns>
        <columns>Funder_Account__c</columns>
        <columns>Project_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>All_Contracts_2</fullName>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.NAME</columns>
        <columns>Area__c</columns>
        <columns>Sub_Area__c</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contracts 2</label>
    </listViews>
    <listViews>
        <fullName>All_Contracts_Funder_View</fullName>
        <columns>CONTRACT.NAME</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Funder_Account__c</columns>
        <columns>Area__c</columns>
        <columns>Sub_Area__c</columns>
        <columns>Total_Amount_of_Contract__c</columns>
        <columns>Total_Amount_REMAINING__c</columns>
        <columns>Project_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Intracompany_Sub_contract__c</field>
            <operation>notEqual</operation>
            <value>Yes</value>
        </filters>
        <label>All Contracts - Funder View</label>
    </listViews>
    <listViews>
        <fullName>Master_Contract_View</fullName>
        <columns>CONTRACT.LAST_UPDATE</columns>
        <columns>CONTRACT.NAME</columns>
        <columns>Active__c</columns>
        <columns>Contracting_Entity__c</columns>
        <columns>Intracompany_Sub_contract__c</columns>
        <columns>Dimagi_Prime_Contracting_Entity__c</columns>
        <columns>Execution_Date__c</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Contract_End_Date__c</columns>
        <columns>Total_Amount_of_Contract__c</columns>
        <columns>Burdened_Income_BUDGET__c</columns>
        <columns>Direct_Costs_Travel_BUDGET__c</columns>
        <columns>Direct_Costs_Sub_Contract_BUDGET__c</columns>
        <columns>Total_Direct_Costs_BUDGET__c</columns>
        <columns>Total_Amount_REMAINING__c</columns>
        <filterScope>Everything</filterScope>
        <label>Master Contract View</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>